fixed the image height so the layout doesn't flicker around

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -27,7 +27,7 @@ footer {
   text-align: center;
 
   img {
-    width: 60%;
+    height: 320px;
   }
 }
 
